fix(sidebar): incorrect offset and z-index on mobile (#8856)
remove --z-index-top variable, and split into per-element variables -
not everything can be on top!

remove some unnecessary z-indexes due to relative positioning

I intend to follow up with another commit removing the rest of the
reused/unnecessary z-indexes later - but don't want to block fixing this
issue with that

fixes https://github.com/mdn/yari/issues/8646
fixes https://github.com/mdn/yari/issues/8702

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -7,7 +7,7 @@
 .main-document-header-container {
   position: sticky;
   top: 0;
-  z-index: var(--z-index-top);
+  z-index: var(--z-index-main-header);
   @media screen and (min-width: $screen-md) {
     .top-banner.visible ~ &,
     .top-banner.loading ~ & {
@@ -645,10 +645,15 @@ kbd {
     display: flex;
     flex-direction: column;
   }
+
   max-height: var(--max-height);
   position: sticky;
   top: var(--offset);
+  z-index: var(--z-index-sidebar-mobile);
+
   @media screen and (min-width: $screen-md) {
+    z-index: auto;
+
     .sidebar {
       mask-image: linear-gradient(
         to bottom,
@@ -657,6 +662,7 @@ kbd {
         rgba(0, 0, 0, 0) 100%
       );
     }
+
     @media screen and not (min-height: $screen-height-place-limit) {
       overflow: auto;
     }
